// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ERC20TransferEditor Should match snapshot 1`] = `
<div>
   
  <div>
    <form>
      <div
        class="sc-jrAFXE sc-kLgnNl jLAWlL cyQrbd"
      >
        <div
          class="sc-jrAFXE sc-iktFfs jLAWlL fookKt"
        >
          recipient
        </div>
        <div
          class="sc-jrAFXE sc-jJEKmz jLAWlL kwcuVC"
        >
          <div
            class="sc-iBPTik jFEHgg"
          >
            <div
              class="sc-fubCzh fldzaP"
            >
              <div>
                <img
                  alt="Avatar"
                  class="sc-dlfnuX sc-jSgvzq hZGubn bmPvYM"
                  data-testid="avatar"
                  size="24"
                  src="test"
                />
              </div>
            </div>
            <input
              class="sc-gKseQn MqBDT"
              name="recipientAddress"
              placeholder="ethereumAddress"
              value="0xaF8eB8C3A5d9d900AA0B98e3Df0bcC17d3C5F698"
            />
            <div
              class="sc-fubCzh jfgyYA"
            >
              <div
                class="sc-jrAFXE sc-citxvW jLAWlL beQrpS"
              >
                <svg
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="18"
                    x2="6"
                    y1="6"
                    y2="18"
                  />
                  <line
                    x1="6"
                    x2="18"
                    y1="6"
                    y2="18"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-jrAFXE sc-jJEKmz jLAWlL kwcuVC"
      >
        <div
          class="sc-jrAFXE sc-kLgnNl jLAWlL cyQrbd"
        >
          <div
            class="sc-jrAFXE sc-iktFfs jLAWlL fookKt"
          >
            amount
          </div>
          <div
            class="sc-jrAFXE sc-jJEKmz jLAWlL kwcuVC"
          >
            <div
              class="sc-iBPTik jFEHgg"
            >
              <div
                class="sc-fubCzh fldzaP"
              />
              <input
                autocomplete="off"
                autocorrect="off"
                class="sc-gKseQn MqBDT"
                inputmode="decimal"
                maxlength="79"
                minlength="1"
                name="amount"
                pattern="^[0-9]*[.,]?[0-9]*$"
                placeholder="0.0"
                spellcheck="false"
                type="text"
                value="5.0"
              />
              <div
                class="sc-fubCzh jfgyYA"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-jrAFXE sc-cBNeex jLAWlL ikLJHn"
        />
        <div
          class="sc-jrAFXE sc-kLgnNl jLAWlL cyQrbd"
        >
          <div
            class="sc-jrAFXE sc-iktFfs jLAWlL fookKt"
          >
            asset
          </div>
          <div
            class="sc-jrAFXE sc-jJEKmz jLAWlL kwcuVC"
          >
            <div
              class="sc-iBPTik jFEHgg"
            >
              <div
                class="sc-fubCzh fldzaP"
              >
                <div />
              </div>
              <input
                class="sc-gKseQn MqBDT"
                name="token"
                placeholder="token"
                readonly=""
                value=""
              />
              <div
                class="sc-fubCzh jfgyYA"
              >
                <svg
                  fill="none"
                  height="20"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="6 9 12 15 18 9"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="sc-bdfBQB hzKgpq"
        data-testid="submit-erc20transfer"
        type="submit"
      >
        saveAction
      </button>
    </form>
  </div>
   
</div>
`;

exports[`ERC20TransferEditor Should match snapshot with default values 1`] = `
<div>
   
  <div>
    <form>
      <div
        class="sc-jrAFXE sc-kLgnNl jLAWlL cyQrbd"
      >
        <div
          class="sc-jrAFXE sc-iktFfs jLAWlL fookKt"
        >
          recipient
        </div>
        <div
          class="sc-jrAFXE sc-jJEKmz jLAWlL kwcuVC"
        >
          <div
            class="sc-iBPTik jFEHgg"
          >
            <div
              class="sc-fubCzh fldzaP"
            >
              <div>
                <img
                  alt="Avatar"
                  class="sc-dlfnuX sc-jSgvzq hZGubn bmPvYM"
                  data-testid="avatar"
                  size="24"
                  src="test"
                />
              </div>
            </div>
            <input
              class="sc-gKseQn MqBDT"
              name="recipientAddress"
              placeholder="ethereumAddress"
              value=""
            />
            <div
              class="sc-fubCzh jfgyYA"
            />
          </div>
        </div>
      </div>
      <div
        class="sc-jrAFXE sc-jJEKmz jLAWlL kwcuVC"
      >
        <div
          class="sc-jrAFXE sc-kLgnNl jLAWlL cyQrbd"
        >
          <div
            class="sc-jrAFXE sc-iktFfs jLAWlL fookKt"
          >
            amount
          </div>
          <div
            class="sc-jrAFXE sc-jJEKmz jLAWlL kwcuVC"
          >
            <div
              class="sc-iBPTik jFEHgg"
            >
              <div
                class="sc-fubCzh fldzaP"
              />
              <input
                autocomplete="off"
                autocorrect="off"
                class="sc-gKseQn MqBDT"
                inputmode="decimal"
                maxlength="79"
                minlength="1"
                name="amount"
                pattern="^[0-9]*[.,]?[0-9]*$"
                placeholder="0.0"
                spellcheck="false"
                type="text"
                value="0.0"
              />
              <div
                class="sc-fubCzh jfgyYA"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-jrAFXE sc-cBNeex jLAWlL ikLJHn"
        />
        <div
          class="sc-jrAFXE sc-kLgnNl jLAWlL cyQrbd"
        >
          <div
            class="sc-jrAFXE sc-iktFfs jLAWlL fookKt"
          >
            asset
          </div>
          <div
            class="sc-jrAFXE sc-jJEKmz jLAWlL kwcuVC"
          >
            <div
              class="sc-iBPTik jFEHgg"
            >
              <div
                class="sc-fubCzh fldzaP"
              >
                <div />
              </div>
              <input
                class="sc-gKseQn MqBDT"
                name="token"
                placeholder="token"
                readonly=""
                value=""
              />
              <div
                class="sc-fubCzh jfgyYA"
              >
                <svg
                  fill="none"
                  height="20"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="6 9 12 15 18 9"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="sc-bdfBQB hzKgpq"
        data-testid="submit-erc20transfer"
        type="submit"
      >
        saveAction
      </button>
    </form>
  </div>
   
</div>
`;
